FIN-4:CSS changes

--- a/src/app/introduction/homepage/homepage.component.html
+++ b/src/app/introduction/homepage/homepage.component.html
@@ -1,3 +1,11 @@
+<div class="container">
 <div style="text-align: center;">
     <h1>{{title}}</h1>
+</div>
+
+<div class="card" style="display: flex; justify-content: center;">
+    <p><label>Username:</label><input type="text" style="margin-left: 10px;"></p>
+    <p><label>Password:</label><input type="password" style="margin-left: 10px;"></p>
+    <button type="submit" style="align-self: center; width: 100px;height: 30px;">SUBMIT</button>
+</div>
 </div>
