FIN-5:HTML  changes

--- a/src/app/introduction/homepage/homepage.component.html
+++ b/src/app/introduction/homepage/homepage.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="card" style="display: flex; justify-content: center;">
-    <p><label>Username:</label><input type="text" style="margin-left: 10px;"></p>
+    <p><label>Username:</label><input type="text" maxlength="10" style="margin-left: 10px;"></p>
     <p><label>Password:</label><input type="password" style="margin-left: 10px;"></p>
     <button type="submit" style="align-self: center; width: 100px;height: 30px;">SUBMIT</button>
 </div>
