--- a/src/app/introduction/homepage/homepage.component.html
+++ b/src/app/introduction/homepage/homepage.component.html
@@ -3,9 +3,38 @@
     <h1>{{title}}</h1>
 </div>
 
-<div class="card" style="display: flex; justify-content: center;">
-    <p><label>Username:</label><input type="text" maxlength="10" style="margin-left: 10px;"></p>
-    <p><label>Password:</label><input type="password" style="margin-left: 10px;"></p>
+<div class="card" style="display: flex; justify-content: center;" *ngIf="login">
+    <div class="form-group">
+        <label><b>Username:</b></label>
+        <input type="text" maxlength="10" style="margin-left: 10px;">
+    </div>
+    <div class="form-group">
+        <label><b>Password:</b></label>
+        <input type="password" maxlength="10" style="margin-left: 10px;">
+    </div>
+  
     <button type="submit" style="align-self: center; width: 100px;height: 30px;">SUBMIT</button>
+    <p>Are you a new Gardener <button class="btn btn-link" (click)="signup()">Sign Up</button></p>
+</div>
+
+<div class="card" style="display: flex; justify-content: center;" *ngIf="!login">
+    <div class="form-group">
+        <label><b>Username:</b></label>
+        <input type="text" maxlength="20"  [(ngModel)]="newuser" style="margin-left: 10px;">
+    </div>
+    <div class="form-group">
+        <label><b>Password:</b></label>
+        <input type="password" maxlength="20" [(ngModel)]="newpassword" style="margin-left: 10px;">
+    </div>
+    <div class="form-group">
+        <label><b>Confirm Password:</b></label>
+        <input type="password" maxlength="20" [(ngModel)]="confpassword" style="margin-left: 10px;">
+    </div>
+    <div class="form-group">
+        <label><b>Email address:</b></label>
+        <input type="text" maxlength="50" [(ngModel)]="emailaddress" style="margin-left: 10px;">
+    </div>
+
+    <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="register()">REGISTER</button>
 </div>
 </div>
