--- a/src/app/introduction/homepage/homepage.component.html
+++ b/src/app/introduction/homepage/homepage.component.html
@@ -3,38 +3,20 @@
     <h1>{{title}}</h1>
 </div>
 
-<div class="card" style="display: flex; justify-content: center;" *ngIf="login">
+<div class="card" style="display: flex; justify-content: center;">
+    <h4 style="color: red;">{{errormessage}}</h4>
     <div class="form-group">
         <label><b>Username:</b></label>
-        <input type="text" maxlength="10" style="margin-left: 10px;">
+        <input type="text" maxlength="10" [(ngModel)]="userName" style="margin-left: 10px;">
     </div>
     <div class="form-group">
         <label><b>Password:</b></label>
-        <input type="password" maxlength="10" style="margin-left: 10px;">
+        <input type="password" maxlength="10" [(ngModel)]="password" style="margin-left: 10px;">
     </div>
   
-    <button type="submit" style="align-self: center; width: 100px;height: 30px;">SUBMIT</button>
+    <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="login()">LOGIN</button>
     <p>Are you a new Gardener <button class="btn btn-link" (click)="signup()">Sign Up</button></p>
 </div>
 
-<div class="card" style="display: flex; justify-content: center;" *ngIf="!login">
-    <div class="form-group">
-        <label><b>Username:</b></label>
-        <input type="text" maxlength="20"  [(ngModel)]="newuser" style="margin-left: 10px;">
-    </div>
-    <div class="form-group">
-        <label><b>Password:</b></label>
-        <input type="password" maxlength="20" [(ngModel)]="newpassword" style="margin-left: 10px;">
-    </div>
-    <div class="form-group">
-        <label><b>Confirm Password:</b></label>
-        <input type="password" maxlength="20" [(ngModel)]="confpassword" style="margin-left: 10px;">
-    </div>
-    <div class="form-group">
-        <label><b>Email address:</b></label>
-        <input type="text" maxlength="50" [(ngModel)]="emailaddress" style="margin-left: 10px;">
-    </div>
 
-    <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="register()">REGISTER</button>
-</div>
 </div>
