--- a/src/app/dashboard/characters/characters.component.html
+++ b/src/app/dashboard/characters/characters.component.html
@@ -5,19 +5,19 @@
     </div>
     <div class="card" style="display: flex; justify-content: center;" >
         <div class="form-group">
-            <label><b>Garden detail 1:</b></label>
+            <label><b>Inventory detail 1:</b></label>
             <input type="text" maxlength="20"  [(ngModel)]="gard1" style="margin-left: 10px;">
         </div>
         <div class="form-group">
-            <label><b>Garden details 2:</b></label>
+            <label><b>Inventory details 2:</b></label>
             <input type="password" maxlength="20" [(ngModel)]="gard2" style="margin-left: 10px;">
         </div>
         <div class="form-group">
-            <label><b>Garden detail 3:</b></label>
+            <label><b>Inventory detail 3:</b></label>
             <input type="password" maxlength="20" [(ngModel)]="gard3" style="margin-left: 10px;">
         </div>
         <div class="form-group">
-            <label><b>Garden detail 4:</b></label>
+            <label><b>Inventory detail 4:</b></label>
             <input type="text" maxlength="50" [(ngModel)]="gard4" style="margin-left: 10px;">
         </div>
     
