new function is called

--- a/src/app/introduction/homepage/homepage.component.html
+++ b/src/app/introduction/homepage/homepage.component.html
@@ -14,7 +14,7 @@
         <input type="password" maxlength="30" [(ngModel)]="password" style="margin-left: 10px;">
     </div>
   
-    <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="login()">LOGIN</button>
+    <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="logincheck()">LOGIN</button>
     <p>Are you a new Gardener <button class="btn btn-link" (click)="signup()">Sign Up</button></p>
 </div>
 
