inventory details api

--- a/src/app/dashboard/characters/characters.component.html
+++ b/src/app/dashboard/characters/characters.component.html
@@ -3,6 +3,7 @@
         <h1>{{title}}</h1>
     </div>
     <div class="card" style="display: flex; justify-content: center;" >
+        <h4 style="color:blue">{{message}}</h4>
         <div class ="form-group" *ngFor="let row of rows; let i =index">
         <div class="form-group">
             <label><b>Inventory detail: {{i+1}}:</b></label>
