fetch inventory details api integrated

--- a/src/app/dashboard/characters/characters.component.html
+++ b/src/app/dashboard/characters/characters.component.html
@@ -7,8 +7,8 @@
         <div class ="form-group" *ngFor="let row of rows; let i =index">
         <div class="form-group">
             <label><b>Inventory detail: {{i+1}}:</b></label>
-            <p><label style="display: inline-block; font-weight: bold;">Name:</label><input type="text" maxlength="20"  [(ngModel)]="row.name" style="display:inline-block; width:200px; margin-left: 10px;">
-            <label style="display: inline-block;font-weight: bold;">Qty:</label><input type="number" max="100" [(ngModel)] = "row.quantity" style="display: inline-block; width:50px; margin-left: 3px;"><i class="fa fa-window-close" style="color: red;margin-left: 2px;" (click)="removerow(i)"></i></p>
+            <p><label style="display: inline-block; font-weight: bold;">Name:</label><input type="text" maxlength="20"  [(ngModel)]="row.itemname" style="display:inline-block; width:200px; margin-left: 10px;">
+            <label style="display: inline-block;font-weight: bold;">Qty:</label><input type="number" max="100" [(ngModel)] = "row.itemqty" style="display: inline-block; width:50px; margin-left: 3px;"><i class="fa fa-window-close" style="color: red;margin-left: 2px;" (click)="removerow(i)"></i></p>
 
         </div>
      </div> 
