--- a/src/app/introduction/signup/signup.component.html
+++ b/src/app/introduction/signup/signup.component.html
@@ -20,7 +20,7 @@
             <input type="text" maxlength="50" [(ngModel)]="emailaddress" style="margin-left: 10px;">
         </div>
     
-        <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="register()">REGISTER</button>
+        <button type="submit" style="align-self: center; width: 100px;height: 30px;" (click)="checker()">REGISTER</button>
     </div>
     </div>
 
