--- a/src/app/dashboard/characters/characters.component.html
+++ b/src/app/dashboard/characters/characters.component.html
@@ -8,7 +8,7 @@
         <div class="form-group">
             <label><b>Inventory detail: {{i+1}}:</b></label>
             <p><label style="display: inline-block; font-weight: bold;">Name:</label><input type="text" maxlength="20"  [(ngModel)]="row.itemname" style="display:inline-block; width:200px; margin-left: 10px;">
-            <label style="display: inline-block;font-weight: bold;">Qty:</label><input type="number" max="100" [(ngModel)] = "row.itemqty" style="display: inline-block; width:50px; margin-left: 3px;"><i class="fa fa-window-close" style="color: red;margin-left: 2px;" (click)="removerow(i,row)"></i></p>
+            <label style="display: inline-block;font-weight: bold;">Qty:</label><input type="number" max="100" [(ngModel)] = "row.itemqty" style="display: inline-block; width:50px; margin-left: 3px;"><i class="fa fa-window-close" style="color: red;margin-left: 2px;" (click)="deleterow(i,row)"></i></p>
         </div>
      </div> 
         <button type="submit" style="align-self: center; width: 100px;height: 15px;" (click)="addrow()">ADD</button>
